Fixed Overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,36 +11,45 @@ $fa-font-path: "~@fortawesome/fontawesome-free/webfonts";
 /* Prevent text selection of a <body> element in all major browsers */
 body {
   -youbkit-touch-callout: none; /* iOS Safari */
-  -youbkit-user-select: none;   /* Chrome 6.0+, Safari 3.1+, Edge & Opera 15+ */
-  -moz-user-select: none;       /* Firefox */
-  -ms-user-select: none;        /* IE 10+ and Edge */
-  user-select: none;            /* Non-prefixed version,
-								  currently supported by Chrome and Opera */
+  -youbkit-user-select: none; /* Chrome 6.0+, Safari 3.1+, Edge & Opera 15+ */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE 10+ and Edge */
+  user-select: none;
+  /* Non-prefixed version,
+        currently supported by Chrome and Opera */
 }
+
 //Disable Horizontal Scrolling
-@media (min-width: 769px) {
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+@media (pointer: none), (pointer: coarse) {
   html, body {
-    max-width: 100%;
-    overflow-x: hidden;
+    overflow-x: unset;
   }
 }
+
 // I love those lines man
 
-.modal-backdrop{
+.modal-backdrop {
   z-index: 995 !important;
   opacity: 0 !important;
   //filter: blur(1px);
   //transition: opacity 1000ms linear !important;
   //display: none !important;
 }
-.fade{
+
+.fade {
   z-index: 995 !important;
 }
-.modal{
+
+.modal {
   z-index: 1000 !important;
 }
 
-body.modal-open .background-container{
+body.modal-open .background-container {
   -webkit-filter: blur(4px);
   -moz-filter: blur(4px);
   -o-filter: blur(4px);
@@ -73,16 +82,17 @@ body.modal-open .background-container{
 //For Type Icons
 .icon {
   border-radius: 100%;
-  height:30px;
+  height: 30px;
   width: 30px;
   //margin-left: auto;
   transition: 200ms all;
-  margin-right: 2px;margin-top: 4px
+  margin-right: 2px;
+  margin-top: 4px
   //display: inline-flex;
   //text-align: right;
 }
 
-.icon:hover{
+.icon:hover {
   filter: saturate(200%);
   transform: scale(1.1);
   cursor: pointer;
@@ -183,16 +193,15 @@ body.modal-open .background-container{
   background: #539DDF;
   box-shadow: 0 0 20px #539DDF;
 }
- //End of type icons
 
-
+//End of type icons
 
 
 body {
   font-size: .9rem;
 }
 
-.FixScrolling{
+.FixScrolling {
   position: fixed;
 }
 
@@ -201,7 +210,7 @@ body {
 }
 
 // angular perfect scrollbar style
-@media (pointer:fine){
+@media (pointer: fine) {
   .sidebar .ps.ps--scrolling-y > .ps__rail-y,
   .sidebar > .ps.ps--scrolling-x > .ps__rail-x,
   .ps .ps__rail-x:hover,
